--- a/about.html
+++ b/about.html
@@ -83,10 +83,10 @@
               </li>
 
               <li>
-                <a class="nav-link scrollto" href="#contact">Contact Us</a>
+                <a class="nav-link scrollto" href="contact.html">Contact Us</a>
               </li>
               <li>
-                <a class="getstarted scrollto" href="#about">Get Started</a>
+                <a class="getstarted scrollto" href="about.html">Get Started</a>
               </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -570,18 +570,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Company</h3>
+              <h3>REAL CHECK VERIFICATION SERVICES PRIVATE LIMITED</h3>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                house no- 531, street no.4,<br />
+                Ambedkar Nagar,Haiderpur- 110088<br />
+                India <br /><br />
+                <strong>Phone:</strong>9717127090,9911202915<br />
+                <strong>Email:</strong> info@realcheckservices.in<br />
               </p>
             </div>
 
             <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
+              <h4>Quick Links</h4>
               <ul>
                 <li>
                   <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
@@ -607,22 +607,16 @@
               <h4>Our Services</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">Board Of Directors</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Web Development</a>
+                  <a href="#">Why Choose Real Check Verification service</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Graphic Design</a>
+                  <a href="#">Life at Real Check Verification service</a>
                 </li>
               </ul>
             </div>
@@ -630,8 +624,10 @@
             <div class="col-lg-4 col-md-6 footer-newsletter">
               <h4>Join Our Newsletter</h4>
               <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
+                By submitting this form, you agree to receive promotional
+                material from Real Check Verification service Pvt. Ltd. You can
+                chose to unsubscribe at any later date. Your privacy is
+                important and we will not share your details elsewhere.
               </p>
               <form action="" method="post">
                 <input type="email" name="email" /><input
@@ -647,15 +643,12 @@
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>Company</span></strong
+            &copy; Copyright
+            <strong
+              ><span
+                >REAL CHECK VERIFICATION SERVICES PRIVATE LIMITED</span
+              ></strong
             >. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
@@ -668,7 +661,6 @@
       </div>
     </footer>
     <!-- End Footer -->
-
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
