--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
               </li>
 
               <li>
-                <a class="nav-link scrollto" href="#contact">Contact Us</a>
+                <a class="nav-link scrollto" href="contact.html">Contact Us</a>
               </li>
               <li>
-                <a class="getstarted scrollto" href="#about">Get Started</a>
+                <a class="getstarted scrollto" href="about.html">Get Started</a>
               </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -1074,7 +1074,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Bethany</h3>
+              <h3>REAL CHECK VERIFICATION SERVICES PRIVATE LIMITED</h3>
               <p>
                 house no- 531, street no.4,<br />
                 Ambedkar Nagar,Haiderpur- 110088<br />
